# lamini-case-rag

./: README.md  case_rag.ipynb  data.jsonl  documents.ipynb  pyproject.toml
