[tool.poetry]
name = "lamini-ocsn"
version = "0.1.0"
description = "Notebook for using lamini and oscn"
authors = ["jdungan <johnadungan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
transformers = "^4.46.2"
gtts = "^2.5.4"
pypdf = "^5.1.0"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
pdf2image = "^1.17.0"
pytesseract = "^0.3.13"
ipywidgets = "^8.1.5"
tensorflow-metal = "^1.1.0"
tensorflow-macos = "^2.16.2"
numpy = "^1.24"
lamini = "3.1.3"
packaging = "^24.2"
faiss-cpu = "^1.9.0.post1"
jsonlines = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false